back/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polizai-back
  labels:
    app: polizai-back
spec:
  replicas: 2
  selector:
    matchLabels:
      app: polizai-back
  template:
    metadata:
      labels:
        app: polizai-back
    spec:
      containers:
      - name: polizai-back
        image: angelalonso/polizai-back:v0.1
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: 200m
          requests:
            cpu: 100m
