back/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: polizai-back
spec:
  selector:
    app: polizai-back
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
