back/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polizai-back
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: api.poliz.ai
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: polizai-back
              port:
                number: 8000
